<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/liga_navigation"
        android:enabled="true"
        android:icon="@drawable/ic_teams"
        android:title="@string/liga"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/match_navigation"
        android:enabled="true"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/match" />

    <item
        android:id="@+id/teams_navigation"
        android:enabled="true"
        android:icon="@drawable/team"
        android:title="@string/match" />

    <item
        android:id="@+id/favorit_navigation"
        android:icon="@drawable/ic_favorites"
        android:enabled="true"
        android:title="@string/favorites" />

</menu>
