<?xml version="1.0" encoding="utf-8"?>
<resources>
    <item name="txtName" type="id" />
    <item name="gambar" type="id" />
    <item name="recycleTeam" type="id" />
    <item name="progressBar" type="id" />
    <item name="isiText" type="id" />
    <item name="nextMatch" type="id" />
    <item name="nextMatcgFragment" type="id" />
    <item name="match" type="id" />
    <item name="viewpager" type="id" />
    <item name="nextRecycle" type="id" />
    <item name="prevRecycle" type="id" />
    <item name="nama_event" type="id" />
    <item name="strSport" type="id" />
    <item name="strHomeTeam" type="id" />
    <item name="strAwayTeam" type="id" />
    <item name="gambarHome" type="id" />
    <item name="gambarAway" type="id" />
    <item name="intHomeScore" type="id" />
    <item name="intAwayScore" type="id" />
    <item name="dateEventLocal" type="id" />
    <item name="dateEvent" type="id" />
    <item name="toolbar" type="id" />
    <item name="linearNav" type="id" />
    <item name="searchMatch" type="id" />
    <item name="recycleMatch" type="id" />
    <item name="imageFavorit" type="id" />
    <item name="recycle_match" type="id" />
    <item name="cariMatch" type="id" />
    <item name="progressBar_match" type="id" />
    <item name="btmNav" type="id" />
    <item name="recycle_fav" type="id" />
    <item name="nama_tim" type="id" />
    <item name="deskripsi_team" type="id" />
    <item name="nama_palyer" type="id" />
    <item name="dateBorn" type="id" />
    <item name="nama" type="id" />
    <item name="played" type="id" />
    <item name="loss" type="id" />
    <item name="goalsfor" type="id" />
    <item name="win" type="id" />
    <item name="draw" type="id" />
    <item name="searchTeam" type="id" />
</resources>